removing unused classes

--- a/style.css
+++ b/style.css
@@ -4,11 +4,11 @@ Theme Name:  Albatross
 Theme URI:   http://henleythemes.com/albatross
 Author:      Evan Henley
 Author URI:  http://henleyedition.com/
-Description: Theme with a big colorful sidebar.
-Version:     0.1
+Description: Simple theme with animated sidebar.
+Version:     0.2
 License:     GNU General Public License v3 or later
 License URI: http://www.gnu.org/licenses/gpl.html
-Tags:        light, black, responsive, two-columns, right-sidebar, custom-menu, responsive-layout, translation-ready
+Tags:        light, black, green, responsive, two-columns, right-sidebar, custom-menu, responsive-layout, translation-ready
 Text Domain: albatross
 
 Counterpoint WordPress theme, Copyright (C) 2014 Evan Henley
