various bug fixes

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
 
 Theme Name:  Albatross
-Theme URI:   http://henleythemes.com/albatross
+Theme URI:   http://github.com/echenley/albatross
 Author:      Evan Henley
 Author URI:  http://henleyedition.com/
 Description: Simple theme with animated sidebar.
@@ -10,6 +10,8 @@ License:     GNU General Public License v3 or later
 License URI: http://www.gnu.org/licenses/gpl.html
 Tags:        light, black, green, responsive, two-columns, right-sidebar, custom-menu, responsive-layout, translation-ready
 Text Domain: albatross
+
+GitHub Theme URI: echenley/albatross
 
 Counterpoint WordPress theme, Copyright (C) 2014 Evan Henley
 Counterpoint WordPress theme is licensed under the GPL.
