updated version to 0.3

--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ License:     GNU General Public License v3 or later
 License URI: http://www.gnu.org/licenses/gpl.html
 Tags:        light, black, green, responsive, two-columns, right-sidebar, custom-menu, responsive-layout, translation-ready
 Text Domain: albatross
-
-GitHub Theme URI: echenley/albatross
+GitHub Theme URI: https://github.com/echenley/albatross
+GitHub Branch:    master
 
 Counterpoint WordPress theme, Copyright (C) 2014 Evan Henley
 Counterpoint WordPress theme is licensed under the GPL.
